# ojigi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
article-data/: eval_results.md  telephone_full.json  telephone_roundtrip.json  telephone_summary.json
examples/: telephone_facts.json  telephone_seed.md
src/ojigi/: __init__.py  auth.py  cli.py  cost.py  models.py  pipeline.py  render.py  settings.py  slack.py  uploader.py
src/ojigi/clients/: base.py  scribe.py  summarizer.py  translator.py
src/ojigi/telephone/: __init__.py  full.py  loop.py  metrics.py  report.py  tts.py
tests/: test_base_usage.py  test_clients_parse.py  test_cost.py  test_render.py  test_telephone.py
