[project]
name = "ojigi"
version = "0.1.0"
description = "録音を置くだけで日英バイリンガル議事録+コストレシート — Zoom AI Services (Scribe/Summarizer/Translator) CLI"
readme = "README.md"
authors = [
    { name = "azami", email = "azami@denet.co.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.39",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
ojigi = "ojigi.cli:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "japanize-matplotlib>=1.1.3",
    "jiwer>=4.0.0",
    "matplotlib>=3.11.0",
    "pytest>=9.1.1",
    "sentence-transformers>=3.0.0",
]
